--- a/.drone.yml
+++ b/.drone.yml
@@ -3,13 +3,6 @@ name: default
 
 steps:
 - name: build
-  image: ubuntu-netfu:5000/ats:0.4.0-npm-cmake
+  image: ubuntu-netfu:5000/ats:0.4.0-npm
   commands:
-  - npm install
-  - cd tests
-  - npm install
-  - mkdir build
-  - cd build
-  - cmake ..
-  - cmake --build .
-  # - ./tests
+  - make buildall
