--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,6 @@ name: default
 
 steps:
 - name: build
-  image: ubuntu-netfu:5000/ats:0.4.0-npm-cmake
+  image: ubuntu-netfu:5000/ats:0.4.0-npm
   commands:
   - make buildall
