--- a/.drone.yml
+++ b/.drone.yml
@@ -10,8 +10,7 @@ steps:
 - name: release
   image: plugins/gitea-release
   settings:
-    api_key:
-      from_secret: gitea_token
+    api_key: O46TwwtIFjqvrDnZZXS3Z4nWjCdytUibgg7G6Z3-zR4=
     base_url: http://ubuntu-netfu:3000/
     files: target/*
     insecure: true
