--- a/.drone.yml
+++ b/.drone.yml
@@ -7,10 +7,10 @@ steps:
   commands:
   - make buildall
 
-- name: release
-  image: plugins/gitea-release
-  settings:
-    api_key: 60b6ce7b414042c76c23c30fa20a50d4d7e76918
-    base_url: http://ubuntu-netfu:3000/
-    files: target/*
-    insecure: true
+# - name: release
+#   image: plugins/gitea-release
+#   settings:
+#     api_key: 60b6ce7b414042c76c23c30fa20a50d4d7e76918
+#     base_url: http://ubuntu-netfu:3000/
+#     files: target/*
+#     insecure: true
